fix font size issues on mobile view

--- a/src/styles/tnbc.css
+++ b/src/styles/tnbc.css
@@ -1071,23 +1071,23 @@ input:focus{
         padding: 11px;
     }
     .tourn-completed {
-        font-size: 12px;
+        font-size: 15px;
         font-weight: 300;
         line-height: 15px;
     }
     .fee{
-        font-size: 12px;
-        line-height: 15px;
+        font-size: 17px;
+        line-height: 18px;
     }
     .fee-amount{
-        font-size: 13px;
+        font-size: 15px;
         font-weight:400;
         line-height: 10px;
     }
     .join-free{
-        height:20px;
-        width: 50px;
-        font-size: 12px;
+        height:30px;
+        width: 80px;
+        font-size: 18px;
         font-weight:500;
     }
     .progress{
